--- a/task09/pom.xml
+++ b/task09/pom.xml
@@ -36,12 +36,15 @@
             <groupId>com.google.flatbuffers</groupId>
             <artifactId>flatbuffers-java</artifactId>
             <version>24.3.25</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/flatbuffers-java-24.3.25.jar</systemPath>
         </dependency>
-
         <dependency>
             <groupId>com.open-meteo</groupId>
             <artifactId>sdk</artifactId>
             <version>1.10.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/sdk-1.10.0.jar</systemPath>
         </dependency>
     </dependencies>
 
